Update .bashrc and .my.cnf for grc

--- a/.my.cnf
+++ b/.my.cnf
@@ -1,5 +1,5 @@
 [mysql]
-pager = grcat /usr/share/grc/conf.mysql | less -iMSx4 -FX -R
+pager = grcat /usr/local/share/grc/conf.mysql | less -iMSx4 -FX -R
 # auto-rehash
 # password = 0000
 
