--- a/.my.cnf
+++ b/.my.cnf
@@ -1,5 +1,6 @@
+[client]
+# password = xxxx
+
 [mysql]
 pager = grcat /usr/local/share/grc/conf.mysql | less -iMSx4 -FX -R
 # auto-rehash
-# password = 0000
-
