--- a/mac.my.cnf
+++ b/mac.my.cnf
@@ -1,6 +1,12 @@
 [client]
 # password = xxxx
 
+[mysqld_safe]
+timezone = UTC # system_time_zone
+
+[mysqld]
+default_time_zone = UTC # time_zone
+
 [mysql]
-pager = grcat /usr/local/share/grc/conf.mysql | less -iMSx4 -FX -R
+pager = grcat /opt/homebrew/share/grc/conf.mysql | less -iMSx4 -FX -R
 # auto-rehash
